@@ -7,7 +7,7 @@
 
 
 void
-mbpdbus_send_lcd_backlight(int cur, int prev);
+mbpdbus_send_lcd_backlight(int cur, int prev, int who);
 
 void
 mbpdbus_send_kbd_backlight(int cur, int prev, int who);
